# ilol-ladder

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  update.sh  wrangler.toml
.github/workflows/: ruff.yml  update.yml
api-app/: main.py  output.py  player.py  players.csv  puuid_getter.py
app/: add_account_to_player.py  add_new_player.py  get_puuid.py  main.py  output.py  player.py  players.csv  puuid_getter.py  rank.py  summoner.py
docs/: auction.html  index.html
frontend/: CNAME  index.html
